[package]
name = "gemi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
flagset = { version = "0.4.6", default-features = false, features = [] }
serde = { version = "1.0.214", default-features = false, features = ["std"], optional = true }
zstd = { version = "0.13.2", default-features = false, features = [], optional = true }
base64 = { version = "0.22.1", default-features = false, features = ["std"], optional = true }

[features]
default = []

std = []

dyn_alloc = []

file_io = [
    "std",
    "dyn_alloc",
]

cgb = [
    "dyn_alloc",
]

apu = [
    "std",
    "dyn_alloc",
]

serde = [
    "std",
    "dyn_alloc",
    "flagset/serde",
    "dep:base64",
    "dep:serde",
    "dep:zstd",
]
